--- a/main.html
+++ b/main.html
@@ -32,6 +32,293 @@
             </ul>
         </div>
     </section>
-   </header> 
+   </header>
+   <main class="main">
+    <aside class="aside">
+        <ul>   
+            <li class="header-aside">
+                <p>Top repositories</p>
+                <div class="button-aside">
+                    <a href="#"><img src="imagenes/044-git repository.png" alt="repository">New</a>
+                </div>
+            </li>
+            <li class="search-aside">            
+                <input type="text" value="Find a repository...">
+            </li>
+            <li class="list-aside">
+                <ul>
+                    <li>
+                        <img class="img-aside" src="imagenes/043-git hub avatar.png" alt="avatar">
+                        <a target="_blank" class="link-aside" href="https://github.com/ibalmer/clase-de-git">ibalmer/clase-de-git</a>
+                    </li>
+                    <li>
+                        <img class="img-aside" src="imagenes/043-git hub avatar.png" alt="avatar">
+                        <a target="_blank" class="link-aside" href="https://github.com/ibalmer/ejercicio">ibalmer/ejercicio</a>
+                    </li>
+                    <li>
+                        <img class="img-aside" src="imagenes/043-git hub avatar.png" alt="avatar">
+                        <a target="_blank" class="link-aside" href="https://github.com/ibalmer/Flexbox_GitHub">ibalmer/Flexbox_GitHub</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        </aside>
+    <section class="section">
+        <main class="main-section">
+            <div class="main-cont-0">
+                <ul>
+                    <li class="home">
+                        <h3>Home</h3>
+                        <div>
+                            <img src="imagenes/046-sparkle.png" alt="sparkle">
+                            <p>Learn with a tutorial project</p>
+                        </div>
+                    </li>
+                    <li class="right-cont-0">
+                        <div>
+                            <a class="ref-cont-0" href="#">Give feedback</a>
+                            <a class="button-cont-0" href=""><img src="imagenes/043-hamburguer-menu.png" alt="">Filter</a>
+                        </div>
+                        <p>...</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="main-cont-1 text-box">
+                <a class="cont-1-4-title" href="#">Introduction to GitHub</a>
+                <a class="cont-1-4-des" href="#">Get started using GitHub in less than hour</a>
+            </div>
+            <div class="main-cont-2 text-box">
+                <a class="cont-1-4-title" href="#">GitHub Pages</a>
+                <a class="cont-1-4-des" href="#">Create a site or blog from your GitHub repositories with GitHub Pages.</a>
+            </div>
+            <div class="main-cont-3 text-box">
+                <a class="cont-1-4-title" href="#">Code with Copilot</a>
+                <a class="cont-1-4-des" href="#">Develop with AI-powered code suggestions using GitHub Copilot, Codespaces, and VS Code.</a>
+            </div>
+            <div class="main-cont-4 text-box">
+                <a class="cont-1-4-title" href="#">Hello GitHub Actions</a>
+                <a class="cont-1-4-des" href="#">Create a GitHub Action and use it in a workflow.</a>
+            </div>
+            <div class="main-cont-5">
+                <a href="#">See more tutorial projects</a>
+            </div>
+            <div class="main-cont-6">
+                <div>
+                    <p class="cont-6-symbol">< ></p>
+                    <p class="cont-6-text">Start writing code</p>
+                </div>
+                <p class="susp">...</p>
+            </div>
+            <div class="main-cont-7 writing-code">
+                <h5>Start a new repository for ibalmer</h5>
+                <p>A repository contains all of your project's files, revision history, and collaborator discussion.</p>
+                <h5>Repository name *</h5>
+                <input class="cont-7-input" type="text" value="Name your new repository...">
+                <form class="cont-7-form">
+                    <div class="cont-7-radio">
+                        <input type="radio" class="radio" name="text" value="Public">
+                        <label>Public</label>
+                        <p>Anyone on the internet can see this repository</p>
+                    </div>
+                    <div class="cont-7-radio">
+                        <input type="radio" class="radio" name="text" value="Private">
+                        <label>Private</label>
+                        <p>You choose who can see and commit to this repository</p>
+                    </div>
+                </form>
+                <div class="cont-7-button">    
+                    <a href="">Create a new repository</a>
+                </div>
+            </div>
+            <div class="main-cont-8 writing-code">
+                <h5>Introduce yourself with a profile README</h5>
+                <p>Share information about yourself by creating a profile README, which appears at the top of your profile page.</p>
+                <div class="monospace div-cont-8">
+                    <p>ibalmer/README.md</p>
+                    <a class="button-cont-8" href="">Create</a>
+                </div>
+                <ol class="monospace list-cont-8">
+                    <li>- 👋 Hi, I’m @ibalmer</li>
+                    <li>- 👀 I’m interested in ...</li>
+                    <li>- 🌱 I’m currently learning ...</li>
+                    <li>- 💞️ I’m looking to collaborate on ...</li>
+                    <li>- 📫 How to reach me ...</li>
+                    <li>- 😄 Pronouns: ...</li>
+                    <li>- ⚡ Fun fact: ...</li>
+                    <li></li>
+                </ol> 
+            </div>
+            <div class="main-cont-9">
+                <div>
+                    <img class="line-img" src="imagenes/045-tool.png" alt="">
+                    <p class="cont-6-text">Use tools of the trade</p>
+                </div>
+                <p class="susp">...</p>
+            </div>
+            <div class="main-cont-10 text-box2">
+                <h4>Write code in your web browser</h4>
+                <div class="link-p">
+                    <img src="https://github.githubassets.com/assets/github-vscode-logo-light-a58629c90ef3.svg" alt="#">
+                    <p>Use <a href="">the github.dev web-based editor</a> from your repository or pull request to create and commit changes.</p>
+                </div>
+            </div>
+            <div class="main-cont-11 text-box2">
+                <h4>Get AI-based coding suggestions</h4>
+                <div class="link-p">
+                    <img class="copilot" src="imagenes/058-gitcopilot.svg" alt="#">
+                    <p><a href="">Try GitHub Copilot free for 30 days,</a> which suggests entire functions in real time, right from your editor.</p>
+                </div>
+            </div>
+            <div class="main-cont-12">
+                <div>
+                    <img class="line-img" src="imagenes/059-graduate.png" alt="">
+                    <p class="cont-6-text">Get started on GitHub</p>
+                </div>
+                <p class="susp">...</p>
+            </div>
+            <div class="main-cont-13">
+                <article class="cont-13">
+                    <img class="play" src="imagenes/060-play.png" alt="">
+                    <div>What is GitHub?</div>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=pBy1zgt0XPc"><img class="cont-13-img" src="https://github.githubassets.com/assets/video-thumbnail-22873af1c902.jpg" alt=""></a>
+                </article>
+            </div>
+            <div class="main-cont-14">
+                <img src="imagenes/040-pullrequest.png" alt="">
+                <h4>Follow this exercise to try the GitHub flow</h4>
+                <p>GitHub's “Hello World” tutorial teaches you essentials, where you create your own repository and learn GitHub's pull request workflow for creating and reviewing code.</p>
+                <div class="cont-14-link">
+                    <a href="#">Try the GitHub flow</a>
+                </div>
+            </div>
+            <div class="main-cont-15">
+              <!--   <section class="cont-15">
+                    <div>
+                        <img src="imagenes/061-graphics.png" alt="">
+                        <p>Trending repositories</p>
+                        <a href="">See more</a>
+                        <p>...</p>
+                    </div>
+                    <div>
+                        <a href=""><img src="https://avatars.githubusercontent.com/u/6154722?s=40&v=4" alt="">microsoft/TRELLIS</a>
+                        <div>
+                            <img src="imagenes/057-star.png" alt="">
+                            <p>Star</p>
+                            <div><img src="imagenes/062-down arrow.png" alt=""></div>
+                        </div>
+                    </div>
+                    <p></p>
+                    <div>
+                        <div></div>
+                        <p>Python</p>
+                        <img src="imagenes/057-star.png" alt="">
+                        <p>1.7k</p>
+                    </div>
+                    <div>
+                        <a href=""><img src="https://avatars.githubusercontent.com/u/40791699?s=40&v=4" alt="">kijai/ComfyUI-HunyuanVideoWrapper</a>
+                        <div>
+                            <img src="imagenes/057-star.png" alt="">
+                            <p>Star</p>
+                            <div><img src="imagenes/062-down arrow.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div>
+                        <div></div>
+                        <p>Python</p>
+                        <img src="imagenes/057-star.png" alt="">
+                        <p>532</p>    
+                </section> -->
+            </div>
+            <div class="main-cont-16">16</div>
+        </main>
+        <aside class="aside-section">
+            <div class="changes">
+                <h4>Latest changes</h4>
+                <ol class="changes-list">
+                    <li>
+                        <p>Yesterday</p>
+                        <a class="text-list" href="#">Copilot Workspace Changelog (December 6th, 2024)</a>
+                    </li>
+                    <li>
+                        <p>Yesterday</p>
+                        <a class="text-list" href="#">Copilot Chat now has a 64k context window with OpenAI GPT-4o</a>
+                    </li>
+                    <li>
+                        <p>Yesterday</p>
+                        <a class="text-list" href="#">Actions metrics improvements: adding runner labels</a>
+                    </li>
+                    <li>
+                        <p>Yesterday</p>
+                        <a class="text-list" href="#">GitHub Models now supports the ability to retrieve structured JSON responses in the UI</a>
+                    </li>
+                    <li class="li-view">
+                        <a class="view" href="#">View changelog →</a>
+                    </li>
+                </ol>
+            </div>
+            <div class="explore">
+                <h5>Explore repositories</h5>
+                <div class="explore-cont">
+                    <ul>
+                        <li class="explore-head">
+                            <a href="#"><img class="explore-logo" src="https://avatars.githubusercontent.com/u/42048915?s=40&v=4" alt="">denoland / deno_doc</a>
+                            <div class="box-star-l">
+                                <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            </div>
+                        </li> 
+                        <li class="explore-p">
+                            <p>Documentation generator for Deno</p>
+                        </li>
+                        <li class="explore-foot">
+                            <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            <p>265</p>
+                            <div class="div-rust"></div>
+                            <p>Rust</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="explore-cont cont-mid">
+                    <ul>
+                        <li class="explore-head ">
+                            <a href="#"><img class="explore-logo" src="https://avatars.githubusercontent.com/u/1396951?s=40&v=4" alt="">getsentry / sentry-java</a>
+                            <div class="box-star-l">
+                                <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            </div>
+                        </li>
+                        <li class="explore-p">
+                            <p>A Sentry SDK for Java, Android and other JVM languages.</p>
+                        </li>
+                        <li class="explore-foot">
+                            <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            <p>1.2k</p>
+                            <div class="div-kotlin"></div>
+                            <p>kotlin</p>
+                        </li>                        
+                    </ul>
+                </div>
+                <div class="explore-cont">
+                    <ul>
+                        <li class="explore-head">
+                            <a href="#"><img class="explore-logo" src="https://avatars.githubusercontent.com/u/144824549?s=40&v=4" alt="">eclipse-sumo / sumo</a>
+                            <div class="box-star-l">
+                                <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            </div>
+                        </li>
+                        <li class="explore-p">
+                            <p>Eclipse SUMO is an open source, highly portable, microscopic and continuous traffic simulation package designed to handle large networks. It allows for intermodal simulation including pedestrians a…</p> 
+                        </li>
+                        <li class="explore-foot">
+                            <img class="explore-star" src="imagenes/057-star.png" alt="">
+                            <p>2.6k</p>
+                            <div class="div-c"></div>
+                            <p>C++</p>
+                        </li>
+                    </ul>
+                </div>
+                <a class="more" href="">Explore more →</a>
+            </div>
+        </aside>
+    </section>
+   </main> 
 </body>
 </html>
