--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Hub</title>
+    <link rel="shortcut icon" href="imagenes/018-github.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -159,7 +160,7 @@
                 <h4>Write code in your web browser</h4>
                 <div class="link-p">
                     <img src="https://github.githubassets.com/assets/github-vscode-logo-light-a58629c90ef3.svg" alt="#">
-                    <p>Use <a href="">the github.dev web-based editor</a> from your repository or pull request to create and commit changes.</p>
+                    <p>Use <a href="">the github.dev web-based editor </a> from your repository or pull request to create and commit changes.</p>
                 </div>
             </div>
             <div class="main-cont-11 text-box2">
